# serializer version: 1
# name: test_config_repodata_previews_and_downloads[mirror-False]
  dict({
    'about': dict({
      'channels': list([
        'https://conda.anaconda.org/conda-forge/',
      ]),
      'dev_url': 'https://github.com/pavelzw/pixi-browse',
      'doc_url': 'https://github.com/pavelzw/pixi-browse',
      'extra': dict({
        'flow_run_id': 'github_34508039282',
        'recipe-maintainers': list([
          'pavelzw',
        ]),
        'remote_url': 'https://github.com/conda-forge/pixi-browse-feedstock',
        'sha': '48f88c59a4cb90f6a0083bafb4cfad73ed23b010',
      }),
      'home': 'https://github.com/pavelzw/pixi-browse',
      'license': 'BSD-3-Clause',
      'summary': 'A TUI to browse conda packages',
    }),
    'channels': list([
      'https://config.invalid/conda-forge',
    ]),
    'packages': list([
      'pixi-browse-0.0.15-pyhc364b38_0.conda',
      'pixi-browse-0.0.14-pyhc364b38_0.conda',
      'pixi-browse-0.0.13-pyhc364b38_0.conda',
      'pixi-browse-0.0.12-pyhc364b38_0.conda',
    ]),
    'requests': list([
      '/conda-forge/noarch/pixi-browse-0.0.15-pyhc364b38_0.conda',
      '/conda-forge/noarch/repodata.json',
    ]),
  })
# ---
# name: test_config_repodata_previews_and_downloads[mirror-True]
  dict({
    'about': dict({
      'channels': list([
        'https://conda.anaconda.org/conda-forge/',
      ]),
      'dev_url': 'https://github.com/pavelzw/pixi-browse',
      'doc_url': 'https://github.com/pavelzw/pixi-browse',
      'extra': dict({
        'flow_run_id': 'github_34508039282',
        'recipe-maintainers': list([
          'pavelzw',
        ]),
        'remote_url': 'https://github.com/conda-forge/pixi-browse-feedstock',
        'sha': '48f88c59a4cb90f6a0083bafb4cfad73ed23b010',
      }),
      'home': 'https://github.com/pavelzw/pixi-browse',
      'license': 'BSD-3-Clause',
      'summary': 'A TUI to browse conda packages',
    }),
    'channels': list([
      'https://config.invalid/conda-forge',
    ]),
    'packages': list([
      'pixi-browse-0.0.15-pyhc364b38_0.conda',
      'pixi-browse-0.0.14-pyhc364b38_0.conda',
      'pixi-browse-0.0.13-pyhc364b38_0.conda',
      'pixi-browse-0.0.12-pyhc364b38_0.conda',
    ]),
    'requests': list([
      '/conda-forge/noarch/pixi-browse-0.0.15-pyhc364b38_0.conda',
      '/conda-forge/noarch/repodata.json',
    ]),
  })
# ---
# name: test_config_repodata_previews_and_downloads[s3-False]
  dict({
    'about': dict({
      'channels': list([
        'https://conda.anaconda.org/conda-forge/',
      ]),
      'dev_url': 'https://github.com/pavelzw/pixi-browse',
      'doc_url': 'https://github.com/pavelzw/pixi-browse',
      'extra': dict({
        'flow_run_id': 'github_34508039282',
        'recipe-maintainers': list([
          'pavelzw',
        ]),
        'remote_url': 'https://github.com/conda-forge/pixi-browse-feedstock',
        'sha': '48f88c59a4cb90f6a0083bafb4cfad73ed23b010',
      }),
      'home': 'https://github.com/pavelzw/pixi-browse',
      'license': 'BSD-3-Clause',
      'summary': 'A TUI to browse conda packages',
    }),
    'channels': list([
      's3://conda-forge',
    ]),
    'packages': list([
      'pixi-browse-0.0.15-pyhc364b38_0.conda',
      'pixi-browse-0.0.14-pyhc364b38_0.conda',
      'pixi-browse-0.0.13-pyhc364b38_0.conda',
      'pixi-browse-0.0.12-pyhc364b38_0.conda',
    ]),
    'requests': list([
      '/conda-forge/noarch/pixi-browse-0.0.15-pyhc364b38_0.conda',
      '/conda-forge/noarch/repodata.json',
    ]),
  })
# ---
# name: test_config_repodata_previews_and_downloads[s3-True]
  dict({
    'about': dict({
      'channels': list([
        'https://conda.anaconda.org/conda-forge/',
      ]),
      'dev_url': 'https://github.com/pavelzw/pixi-browse',
      'doc_url': 'https://github.com/pavelzw/pixi-browse',
      'extra': dict({
        'flow_run_id': 'github_34508039282',
        'recipe-maintainers': list([
          'pavelzw',
        ]),
        'remote_url': 'https://github.com/conda-forge/pixi-browse-feedstock',
        'sha': '48f88c59a4cb90f6a0083bafb4cfad73ed23b010',
      }),
      'home': 'https://github.com/pavelzw/pixi-browse',
      'license': 'BSD-3-Clause',
      'summary': 'A TUI to browse conda packages',
    }),
    'channels': list([
      's3://conda-forge',
    ]),
    'packages': list([
      'pixi-browse-0.0.15-pyhc364b38_0.conda',
      'pixi-browse-0.0.14-pyhc364b38_0.conda',
      'pixi-browse-0.0.13-pyhc364b38_0.conda',
      'pixi-browse-0.0.12-pyhc364b38_0.conda',
    ]),
    'requests': list([
      '/conda-forge/noarch/pixi-browse-0.0.15-pyhc364b38_0.conda',
      '/conda-forge/noarch/repodata.json',
    ]),
  })
# ---
# name: test_default_locations_read_pixi_home_and_explicit_config_replaces_it
  list([
    list([
      'bioconda',
      'conda-forge',
    ]),
    list([
      'https://prefix.dev/conda-forge',
    ]),
  ])
# ---
# name: test_whoneeds_scans_full_repodata_with_shards_enabled
  list([
    'libzlib-1.3.1-hb9d3cd8_2.conda',
    'libzlib-1.3.2-h25fd6f3_3.conda',
    'zlib-1.3.1-hb9d3cd8_2.conda',
  ])
# ---
